@@ -24,8 +24,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="limit_number"/>
     <label name="minimum_time_delay"/>
     <field name="minimum_time_delay"/>
-    <label name="action_model"/>
-    <field name="action_model"/>
-    <label name="action_function"/>
-    <field name="action_function"/>
+    <label name="action"/>
+    <field name="action"/>
 </form>
