@@ -1,9 +1,19 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 from trytond.model import ModelSQL, fields
-from trytond.pool import Pool
+from trytond.pool import Pool, PoolMeta
 
 TRIGGER_LOGS = []
+
+
+class Trigger(metaclass=PoolMeta):
+    __name__ = 'ir.trigger'
+
+    @classmethod
+    def __setup__(cls):
+        super().__setup__()
+        cls.action.selection.append(
+            ('test.trigger_action|trigger', "Test Trigger"))
 
 
 class Triggered(ModelSQL):
@@ -26,6 +36,7 @@ class TriggerAction(ModelSQL):
 
 def register(module):
     Pool.register(
+        Trigger,
         Triggered,
         TriggerAction,
         module=module, type_='model')
